# nft_portal

./: .gitignore  README.md  manage_nft_tasks.py  pyproject.toml  pyrightconfig.json
.github/workflows/: code-quality.yml  debug-containers.yml  debug-deploy.yml  deploy-aws.yml  deploy-simple.yml  deploy.yml  django.yml  docker-build.yml  simple-deploy.yml  test-deploy-simple.yml  test-deploy.yml  test-yaml.yml
accounts/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/serializers/: __init__.py  auth.py  habbo.py  user.py
accounts/utils/: __init__.py  auth.py  validation.py
accounts/views/: __init__.py  habbo.py  metamask.py  user.py
banners/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
banners/migrations/: 0001_initial.py  0002_remove_banner_banner_type.py  0003_remove_banner_image_banner_image_url.py
core/: celery.py  settings.py  urls.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: Dockerfile  nginx.conf  nginx.conf.orig  nginx.ssl.conf
docs/: DEPLOY_ENV.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
gallery/: admin.py  docs.py  models.py  serializers.py  urls.py  views.py
gallery/migrations/: 0001_initial.py  0002_refactor_collection_fields.py  (+3 more)
nft/: admin.py  docs.py  filters.py  models.py  record_access_view.py  serializers.py  services.py  tasks.py  urls.py  views.py  views_backup.py  views_new.py
scripts/: backup-database.sh  clean-all.sh  clean-restart.sh  debug-deploy.sh  debug-web-container.sh  diagnose-ssl.sh  fix-https.sh  fix-web-container.sh  quick-fix.sh  restart-with-ecr-vars.sh  setup-ec2.sh  setup-ssl-manual.sh  setup-ssl.sh  verify-deploy.sh
(+42 files in other folders)
